# sk-appinsights

./: .dockerignore  .env.example  .gitignore  .trivyignore  APP_INSIGHTS_KQL_SETUP.md  CONTAINER_APP_DEPLOYMENT.md  COSMOS_DB_NETWORK_SETUP.md  DASHBOARD_SETUP.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  GUIDE.md  LICENSE  LIVE_METRICS_GUIDE.md  README.md  STATUS.md  TELEMETRY_TABLES.md  USER_BEHAVIOR_ANALYTICS.md  WSL_NETWORK_SETUP.md  azure-dashboard-example.json  azure-workbook.example.json  deploy-containerapp.sh  docker-compose.yml  my_prompt.md  pyproject.toml  setup-containerapp-secrets.sh  setup-cosmos-permissions.sh  setup-github-secrets.sh  test-docker.sh  test_application_map.py  test_cosmos.py  test_fallback.py  test_live_metrics.py  test_stream_api.sh  test_websocket_client.py  verify.sh  verify_traces.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-containerapp.yml
docs/: APPLICATION_MAP_SETUP.md  END_TO_END_TRANSACTION_DETAILS.md  MOUSE_TRACKING.md  MOUSE_TRACKING_QUERIES_DEBUG.md  PAGE_VISIBILITY_TRACKING.md  workshop.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppInsights.tsx  ChatInterface.tsx  Dashboard.tsx  ETFList.tsx  HeatmapAnalysis.tsx  LiveTrafficChart.tsx  NewsFeed.tsx  RequestFlowChart.tsx  RequestFlowChartThree.tsx  ResponseTimeWebGLCanvas.tsx  StockDetail.tsx
frontend/src/hooks/: useMouseTracking.ts  usePageTracking.ts  usePageVisibility.ts
frontend/src/services/: analytics.ts  api.ts
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  agent_service.py  stock_plugin.py
src/api/: __init__.py  analytics.py  chat.py  etf.py  insights.py  live_metrics.py  news.py  stocks.py
src/api/v1/: __init__.py  analytics.py  chat.py  etf.py  insights.py  live_metrics.py  news.py  stocks.py
src/observability/: __init__.py  middleware.py  telemetry.py  utils.py
src/services/: __init__.py  alphavantage_service.py  cosmos_service.py  finnhub_service.py  rss_news_service.py  totalrealreturns_service.py  yfinance_service.py  yfinance_service_backup.py
tests/: conftest.py  test_application_map.py  test_chat.py  test_cosmos_map.py  test_frontend_backend_map.py  test_live_metrics.py  test_observability.py  test_rss_news.py  test_traces.py
